--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,10 +6,10 @@ services:
     container_name: aws-costs-mysql
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: AppUser2024!Database#5621
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: aws_costs
       MYSQL_USER: aws_user
-      MYSQL_PASSWORD: AppUser2024!Database#5621
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     command: --default-authentication-plugin=mysql_native_password --innodb-buffer-pool-size=256M
     ports:
       - "3306:3306"
@@ -24,6 +24,8 @@ services:
       retries: 10
       interval: 10s
       start_period: 30s
+    env_file:
+      - .env
 
   backend:
     build:
@@ -81,16 +83,25 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/.htpasswd:/etc/nginx/.htpasswd
+        #- ./nginx/.htpasswd:/etc/nginx/.htpasswd
       - /etc/letsencrypt:/etc/letsencrypt:ro
+      - nginx_logs:/var/log/nginx
     depends_on:
       - frontend
       - backend
     networks:
       - aws-costs-network
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:80"]
+      timeout: 10s
+      retries: 3
+      interval: 30s
+      start_period: 10s
 
 volumes:
   mysql_data:
+    driver: local
+  nginx_logs:
     driver: local
 
 networks:
