--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,37 +3,52 @@ events {
 }
 
 http {
+    # Rate limiting zone apenas para login
+    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=5r/m;
+    
     upstream backend {
         server backend:8000;
     }
-
+    
     upstream frontend {
         server frontend:3000;
     }
-
+    
     # Redirect HTTP to HTTPS
     server {
         listen 80;
         server_name butler.koombea.ai;
         return 301 https://$server_name$request_uri;
     }
-
+    
     # HTTPS server
     server {
         listen 443 ssl;
         http2 on;
         server_name butler.koombea.ai;
-
+        
         # Prevent indexing
         add_header X-Robots-Tag "noindex, nofollow, noarchive, nosnippet" always;
-
+        
         ssl_certificate /etc/letsencrypt/live/butler.koombea.ai/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/butler.koombea.ai/privkey.pem;
-
+        
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
         ssl_prefer_server_ciphers off;
-
+        
+        # Login endpoint com rate limiting
+        location /api/auth/login {
+            limit_req zone=login_limit burst=3 nodelay;
+            limit_req_status 429;
+            
+            proxy_pass http://backend/auth/login;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        
         # API routes - NO AUTH (so frontend can call backend)
         location /api/ {
             proxy_pass http://backend/;
@@ -42,12 +57,9 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-
-        # Frontend - WITH AUTH (protect the UI)
+        
+        # Frontend - SEM AUTH (htpasswd removido)
         location / {
-            auth_basic "AWS Costs Dashboard - Restricted Access";
-            auth_basic_user_file /etc/nginx/.htpasswd;
-            
             proxy_pass http://frontend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
