--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ pydantic[email]==2.5.1
 python-dotenv==1.0.0
 openai==1.6.1
 anthropic==0.34.0
+google-generativeai==0.8.0
 httpx==0.25.2
 boto3==1.34.0
 botocore==1.34.0
