--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.10.3",
     "web-vitals": "^3.5.2",
-    "react-markdown": "^8.0.7"
+    "react-markdown": "^8.0.7",
+    "mermaid": "^10.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
